<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.0dip"
            android:orientation="vertical" >

            <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/rl_card_front"
                    android:background="@drawable/selector_morebg_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                   >
                <ImageView
                        android:id="@+id/imv_card_front"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:src="@drawable/iconfont_shenfenyanzheng"
                        android:scaleType="centerInside"
                        android:layout_centerVertical="true"/>
                <TextView
                        android:textSize="16.0sp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:id="@+id/tv_card_front"
                        android:background="@null" android:paddingLeft="15.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="45.0dip"
                        android:layout_marginRight="10.0dip"
                        android:hint="@string/card_front_tip"
                        android:singleLine="true"
                        android:layout_toRightOf="@id/imv_card_front"/>
                <ImageView
                        android:id="@+id/imv_card_front_jiantou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10.0dip"
                        android:src="@drawable/icon_jiant"
                        android:scaleType="centerInside"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_choose_card_rear"
                    android:background="@drawable/selector_morebg_center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >
                <ImageView
                        android:id="@+id/imv_card_rear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:src="@drawable/iconfont_shenfenyanzheng"
                        android:scaleType="centerInside"
                        android:layout_centerVertical="true"/>
                <TextView
                        android:textSize="16.0sp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:id="@+id/tv_card_rear"
                        android:background="@null"
                        android:paddingLeft="15.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="45.0dip"
                        android:layout_marginRight="10.0dip"
                        android:hint="@string/card_rear_tip"
                        android:singleLine="true"
                        android:layout_toRightOf="@id/imv_card_rear"/>
                <ImageView
                        android:id="@+id/imv_card_rear_jiantou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10.0dip"
                        android:src="@drawable/icon_jiant"
                        android:scaleType="centerInside"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_choose_card"
                    android:background="@drawable/selector_morebg_bottom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >
                <ImageView
                        android:id="@+id/imv_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:src="@drawable/iconfont_zhengjianhao"
                        android:scaleType="centerInside"
                        android:layout_centerVertical="true"/>
                <TextView
                        android:textSize="16.0sp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:id="@+id/tv_card"
                        android:background="@null"
                        android:paddingLeft="15.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="45.0dip"
                        android:layout_marginRight="10.0dip"
                        android:singleLine="true"
                        android:hint="@string/card_tip"
                        android:layout_toRightOf="@id/imv_card"/>
                <ImageView
                        android:id="@+id/imv_card_jiantou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10.0dip"
                        android:src="@drawable/icon_jiant"
                        android:scaleType="centerInside"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/rl_age"
                    android:background="@drawable/selector_morebg_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip">
                <ImageView
                        android:id="@+id/imv_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:src="@drawable/iconfont_gerenxinxi"
                        android:scaleType="centerInside"
                        android:layout_centerVertical="true"/>

                <EditText
                        android:textSize="16.0sp"
                        android:gravity="center_vertical"
                        android:id="@+id/et_age"
                        android:background="@null"
                        android:paddingLeft="15.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="45.0dip"
                        android:layout_marginRight="10.0dip"
                        android:hint="@string/age_tip"
                        android:singleLine="true"
                        android:maxLength="10"
                        android:inputType="number"
                        android:layout_toRightOf="@id/imv_age"/>

            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl_name"
                    android:background="@drawable/selector_morebg_bottom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/imv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:src="@drawable/iconfont_name"
                        android:scaleType="centerInside"
                        android:layout_centerVertical="true"/>

                <EditText android:textSize="16.0sp"
                          android:gravity="center_vertical"
                          android:id="@+id/et_name"
                          android:background="@null"
                          android:paddingLeft="15.0dip"
                          android:layout_width="fill_parent"
                          android:layout_height="45.0dip"
                          android:layout_marginRight="10.0dip"
                          android:hint="@string/name_tip"
                          android:singleLine="true"
                          android:maxLength="10"
                          android:layout_toRightOf="@id/imv_name"/>
            </RelativeLayout>
	
            <!-- 3张图片 -->
            <RelativeLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <ImageView 
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/front_photo"
                    android:layout_marginLeft="20dp"
                    />
                
                 <ImageView 
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                   	android:id="@+id/back_photo"
                   	android:layout_centerInParent="true"
                    />
                 
                  <ImageView 
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/cert_photo"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    />
            </RelativeLayout>
            
        </LinearLayout>
    </ScrollView>